--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
 </head>
-<body>
-    <nav class="navbar fixed-top mynavcolor" data-bs-theme="dark">
+<body data-bs-spy="scroll" data-bs-target="#navId">
+    <nav class="navbar fixed-top mynavcolor" data-bs-theme="dark" id="navId">
         <div class="container-fluid navbar-expand-xl  largepadd">
             <a class="navbar-brand" href="#"><i class="fa-solid fa-gamepad"></i> GameArena</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
